cmake_minimum_required(VERSION 3.29)
project(Danny616_github_io)

set(CMAKE_CXX_STANDARD 14)

add_executable(Problem_1
        "CS497-Fall-2024-InterviewSkills/Assignment 1/mywork/Problem 1.cpp"
)
add_executable(Problem_2
        "CS497-Fall-2024-InterviewSkills/Assignment 1/mywork/Problem 2.cpp"
)
add_executable(Problem_3
        "CS497-Fall-2024-InterviewSkills/Assignment 1/mywork/Problem 3.cpp"
)
add_executable(Problem_4
        "CS497-Fall-2024-InterviewSkills/Assignment 1/mywork/Problem_4.cpp"
)
