cmake_minimum_required(VERSION 3.29)
project(Danny616_github_io)

set(CMAKE_CXX_STANDARD 14)

add_executable(1Problem_1
        "CS497-Fall-2024-InterviewSkills/Assignment 1/mywork/Problem 1.cpp"
)
add_executable(1Problem_2
        "CS497-Fall-2024-InterviewSkills/Assignment 1/mywork/Problem 2.cpp"
)
add_executable(1Problem_3
        "CS497-Fall-2024-InterviewSkills/Assignment 1/mywork/Problem 3.cpp"
)
add_executable(1Problem_4
        "CS497-Fall-2024-InterviewSkills/Assignment 1/mywork/Problem 4.cpp"
)
add_executable(1Problem_5
        "CS497-Fall-2024-InterviewSkills/Assignment 1/mywork/Problem 5.cpp"
)
add_executable(2Problem_1
        "CS497-Fall-2024-InterviewSkills/Assignment 2/mywork/Problem 1.cpp"
)
add_executable(2Problem_2
        "CS497-Fall-2024-InterviewSkills/Assignment 2/mywork/Problem 2.cpp"
)
add_executable(2Problem_3
        "CS497-Fall-2024-InterviewSkills/Assignment 2/mywork/Problem 3.cpp"
)
add_executable(2Problem_4
        "CS497-Fall-2024-InterviewSkills/Assignment 2/mywork/Problem 4.cpp"
)
add_executable(2Problem_5
        "CS497-Fall-2024-InterviewSkills/Assignment 2/mywork/Problem 5.cpp"
)
