cmake_minimum_required(VERSION 3.29)
project(Danny616_github_io)

set(CMAKE_CXX_STANDARD 14)

add_executable(1Problem_1
        "CS497-Fall-2024-InterviewSkills/Assignment 1/mywork/Problem 1.cpp"
)
add_executable(1Problem_2
        "CS497-Fall-2024-InterviewSkills/Assignment 1/mywork/Problem 2.cpp"
)
add_executable(1Problem_3
        "CS497-Fall-2024-InterviewSkills/Assignment 1/mywork/Problem 3.cpp"
)
add_executable(1Problem_4
        "CS497-Fall-2024-InterviewSkills/Assignment 1/mywork/Problem 4.cpp"
)
add_executable(1Problem_5
        "CS497-Fall-2024-InterviewSkills/Assignment 1/mywork/Problem 5.cpp"
)
add_executable(2Problem_1
        "CS497-Fall-2024-InterviewSkills/Assignment 2/mywork/Problem 1.cpp"
)
add_executable(2Problem_2
        "CS497-Fall-2024-InterviewSkills/Assignment 2/mywork/Problem 2.cpp"
)
add_executable(2Problem_3
        "CS497-Fall-2024-InterviewSkills/Assignment 2/mywork/Problem 3.cpp"
)
add_executable(2Problem_4
        "CS497-Fall-2024-InterviewSkills/Assignment 2/mywork/Problem 4.cpp"
)
add_executable(2Problem_5
        "CS497-Fall-2024-InterviewSkills/Assignment 2/mywork/Problem 5.cpp"
)
add_executable(3Problem_1
        "CS497-Fall-2024-InterviewSkills/Assignment 3/mywork/Problem 1.cpp"
)
add_executable(3Problem_2
        "CS497-Fall-2024-InterviewSkills/Assignment 3/mywork/Problem 2.cpp"
)
add_executable(3Problem_3
        "CS497-Fall-2024-InterviewSkills/Assignment 3/mywork/Problem 3.cpp"
)
add_executable(3Problem_4
        "CS497-Fall-2024-InterviewSkills/Assignment 3/mywork/Problem 4.cpp"
)
add_executable(3Problem_5
        "CS497-Fall-2024-InterviewSkills/Assignment 3/mywork/Problem 5.cpp"
)
add_executable(4Problem_1
        "CS497-Fall-2024-InterviewSkills/Assignment 4/mywork/Problem 1.cpp"
)
add_executable(4Problem_2
        "CS497-Fall-2024-InterviewSkills/Assignment 4/mywork/Problem 2.cpp"
)
add_executable(4Problem_3
        "CS497-Fall-2024-InterviewSkills/Assignment 4/mywork/Problem 3.cpp"
)
add_executable(4Problem_4
        "CS497-Fall-2024-InterviewSkills/Assignment 4/mywork/Problem 4.cpp"
)
add_executable(4Problem_5
        "CS497-Fall-2024-InterviewSkills/Assignment 4/mywork/Problem 5.cpp"
)
add_executable(5Problem_1
        "CS497-Fall-2024-InterviewSkills/Assignment 5/mywork/Problem 1.cpp"
)
add_executable(5Problem_2
        "CS497-Fall-2024-InterviewSkills/Assignment 5/mywork/Problem 2.cpp"
)
add_executable(5Problem_3
        "CS497-Fall-2024-InterviewSkills/Assignment 5/mywork/Problem 3.cpp"
)
add_executable(5Problem_4
        "CS497-Fall-2024-InterviewSkills/Assignment 5/mywork/Problem 4.cpp"
)
add_executable(5Problem_5
        "CS497-Fall-2024-InterviewSkills/Assignment 5/mywork/Problem 5.cpp"
)
add_executable(6Problem_1
        "CS497-Fall-2024-InterviewSkills/Assignment 6/mywork/Problem 1.cpp"
)
add_executable(6Problem_2
        "CS497-Fall-2024-InterviewSkills/Assignment 6/mywork/Problem 2.cpp"
)
add_executable(6Problem_3
        "CS497-Fall-2024-InterviewSkills/Assignment 6/mywork/Problem 3.cpp"
)
add_executable(6Problem_4
        "CS497-Fall-2024-InterviewSkills/Assignment 6/mywork/Problem 4.cpp"
)
add_executable(6Problem_5
        "CS497-Fall-2024-InterviewSkills/Assignment 6/mywork/Problem 5.cpp"
)
add_executable(7Problem_1
        "CS497-Fall-2024-InterviewSkills/Assignment 7/mywork/Problem 1.cpp"
)
add_executable(7Problem_2
        "CS497-Fall-2024-InterviewSkills/Assignment 7/mywork/Problem 2.cpp"
)
add_executable(7Problem_3
        "CS497-Fall-2024-InterviewSkills/Assignment 7/mywork/Problem 3.cpp"
)
add_executable(7Problem_4
        "CS497-Fall-2024-InterviewSkills/Assignment 7/mywork/Problem 4.cpp"
)
add_executable(8Problem_1
        "CS497-Fall-2024-InterviewSkills/Assignment 8/mywork/Problem 1.cpp"
)
add_executable(8Problem_2
        "CS497-Fall-2024-InterviewSkills/Assignment 8/mywork/Problem 2.cpp"
)
add_executable(8Problem_3
        "CS497-Fall-2024-InterviewSkills/Assignment 8/mywork/Problem 3.cpp"
)
add_executable(8Problem_4
        "CS497-Fall-2024-InterviewSkills/Assignment 8/mywork/Problem 4.cpp"
)
add_executable(8Problem_5
        "CS497-Fall-2024-InterviewSkills/Assignment 8/mywork/Problem 5.cpp"
)
